--- a/force-app/main/default/classes/ServerSideControllerForAccount.cls
+++ b/force-app/main/default/classes/ServerSideControllerForAccount.cls
@@ -1,7 +1,7 @@
 global class ServerSideControllerForAccount {
     @AuraEnabled
     public static List<Account> retrieveAccountDataByName(String input) {
-        List<Account> accounts = [SELECT Id, Phone ,Name, Description FROM Account WHERE Name=:input];
+        List<Account> accounts = [SELECT Id, Phone ,Name, Description, Industry, Rating FROM Account WHERE Name=:input];
         return accounts;
     }
 }
