--- a/force-app/main/default/classes/ServerSideControllerForAccount.cls
+++ b/force-app/main/default/classes/ServerSideControllerForAccount.cls
@@ -1,7 +1,13 @@
 global class ServerSideControllerForAccount {
     @AuraEnabled
     public static List<Account> retrieveAccountDataByName(String input) {
-        List<Account> accounts = [SELECT Id, Phone ,Name, Description, Industry, Rating FROM Account WHERE Name=:input];
-        return accounts;
+        if(String.isNotBlank(input)){
+            String forLikeQuery = '%'+input+'%';
+            List<Account> accounts = [SELECT Id, Phone ,Name, Description, Industry, Rating FROM Account WHERE Name LIKE :forLikeQuery];
+            return accounts;
+        } else {
+            List<Account> accounts = [SELECT Id, Phone ,Name, Description, Industry, Rating FROM Account];
+            return accounts;
+        }
     }
 }
